apps/landingpage: fix display of hero text on mobile

--- a/adhocracy-plus/assets/scss/components/landing_page.scss
+++ b/adhocracy-plus/assets/scss/components/landing_page.scss
@@ -98,7 +98,6 @@ $text-color: #1A1A1A;
         display: flex;
         flex-direction: column;
         padding: 20px 0;
-        text-align: center;
 
         &-img {
             order: 1;
@@ -111,9 +110,13 @@ $text-color: #1A1A1A;
             max-width: 95%;
             margin: 0 auto;
 
+            > h1 {
+                font-size: 1.75rem;
+            }
+
             > p {
                 padding-top: 0.25rem;
-                text-align: left;
+                text-align: center;
             }
         }
 
@@ -395,7 +398,7 @@ $text-color: #1A1A1A;
     .lp-organisations-map > img {
         padding-left: 1rem
     }
-    
+
     .lp-organisations-info-overlay {
         padding: 4px 8px !important;
         bottom: -30px !important;
